--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
@@ -24,6 +26,7 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
